@@ -1,0 +1,69 @@
+<h2 class="uppercase">Project Properties</h2>
+
+<table>
+	<tbody>
+		<tr>
+			<th>Project</th>
+			<td>{project.properties.project}</td>
+		</tr>
+		<tr>
+			<th>Copyright</th>
+			<td>{project.properties.copyright}</td>
+		</tr>
+		<tr>
+			<th>Version</th>
+			<td>{project.properties.version}</td>
+		</tr>
+		<tr>
+			<th>Release</th>
+			<td>{project.properties.release}</td>
+		</tr>
+	</tbody>
+</table>
+
+<h2 class="uppercase">Build Properties</h2>
+
+<table>
+	<tbody>
+		<tr>
+			<th>Sphinx</th>
+			<td>{build.sphinxVersion}</td>
+		</tr>
+		<tr>
+			<th>Base Directory</th>
+			<td>{build.baseDirectory}</td>
+		</tr>
+		<tr>
+			<th>Source Directory</th>
+			<td>{project.source}</td>
+		</tr>
+		<tr>
+			<th>Build Directory</th>
+			<td>{project.build}</td>
+		</tr>
+		<tr>
+			<th>Configuration File</th>
+			<td>{project.conf_py}</td>
+		</tr>
+	</tbody>
+</table>
+
+<div style="padding-top: 10px;"></div>
+
+<div class="sphinx-build">
+	<button class="sphinx-html" name="operation" value="build_html" type="submit" <f:if condition="{disableCompile}">disabled="disabled"</f:if>>Build HTML</button>
+	<button class="sphinx-json" name="operation" value="build_json" type="submit" <f:if condition="{disableCompile}">disabled="disabled"</f:if>>Build JSON</button>
+	<button class="sphinx-latex" name="operation" value="build_latex" type="submit" <f:if condition="{disableCompile}">disabled="disabled"</f:if>>Build LaTeX</button>
+	<f:if condition="{hasPdflatex}">
+		<button class="sphinx-pdf" name="operation" value="build_pdf" type="submit" <f:if condition="{disableCompile}">disabled="disabled"</f:if>>Build PDF</button>
+	</f:if>
+	<button class="sphinx-links" name="operation" value="check_links" type="submit" <f:if condition="{disableCompile}">disabled="disabled"</f:if>>Check Links</button>
+</div>
+
+<h2 class="uppercase">Console</h2>
+
+<div id="sphinx-console">
+	<f:format.nl2br><f:format.raw>{consoleOutput}</f:format.raw></f:format.nl2br>
+	<br />
+	&nbsp;
+</div>
